Terminamos o app Marvel, colocamos todos os heróis, sincronizamos todas as páginas com os heróis e colocamos os textos.

--- a/app/src/main/res/layout/marvel_layout.xml
+++ b/app/src/main/res/layout/marvel_layout.xml
@@ -140,7 +140,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/lukecage"
+                        android:id="@+id/idLukecage"
                         android:onClick="AbrirHeroi"
                         android:src="@drawable/lukecage" />
 
