--- a/app/src/main/res/layout/daredevil_layout.xml
+++ b/app/src/main/res/layout/daredevil_layout.xml
@@ -14,14 +14,14 @@
         android:gravity="center">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="350dp"
+            android:layout_height="350dp"
             android:src="@drawable/daredevilgrande" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Dare Devil"
+            android:text="Dare Davel"
             android:textSize="40dp"
             android:gravity="center"/>
 
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:text="@string/capitao"
+            android:text="@string/daredevil"
             android:textAlignment="center"
             android:textSize="16dp"
             android:textAllCaps="true"/>
