--- a/app/src/main/res/layout/ferro_layout.xml
+++ b/app/src/main/res/layout/ferro_layout.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LukeActivity">
-
+    android:orientation="vertical"
+    tools:context=".CapitaoActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,12 +16,12 @@
         <ImageView
             android:layout_width="350dp"
             android:layout_height="350dp"
-            android:src="@drawable/lukegrande"/>
+            android:src="@drawable/ferrogrande" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Luke"
+            android:text="Homem de Ferro"
             android:textSize="40dp"
             android:gravity="center"/>
 
@@ -29,9 +29,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:text="@string/luke"
+            android:text="@string/ferro"
             android:textAlignment="center"
             android:textSize="16dp"
             android:textAllCaps="true"/>
     </LinearLayout>
+
 </LinearLayout>
