--- a/app/src/main/res/layout/groot_layout.xml
+++ b/app/src/main/res/layout/groot_layout.xml
@@ -14,8 +14,8 @@
         android:gravity="center">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="350dp"
+            android:layout_height="350dp"
             android:src="@drawable/grootgrande" />
 
         <TextView
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:text="@string/capitao"
+            android:text="@string/groot"
             android:textAlignment="center"
             android:textSize="16dp"
             android:textAllCaps="true"/>
