--- a/app/src/main/res/layout/thor_layout.xml
+++ b/app/src/main/res/layout/thor_layout.xml
@@ -14,8 +14,8 @@
         android:gravity="center">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="351dp"
+            android:layout_height="351dp"
             android:src="@drawable/thorgrande" />
 
         <TextView
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:text="@string/capitao"
+            android:text="@string/thor"
             android:textAlignment="center"
             android:textSize="16dp"
             android:textAllCaps="true"/>
